test/ModuleInterface/ModuleCache/module-cache-diagnostics.code
// RUN: %empty-directory(%t)
// RUN: %empty-directory(%t/modulecache)
// RUN: export LANGUAGE_BACKTRACE=

// rdar://88830153
// https://github.com/apple/language/issues/58134
// This test is flaky on Windows.
// UNSUPPORTED: OS=windows-msvc

// Setup builds a module TestModule that depends on OtherModule and LeafModule (built from other.code and leaf.code).
// During setup, input and intermediate mtimes are all set to a constant 'old' time (long in the past).
//
// We then revert LeafModule.codeinterface to have a warning-provoking entry in it, and check that we get no diagnostic.
//
// We then modify LeafModule.codeinterface to have an error in it, and check that we get a diagnostic and failure.
//
// We then modify LeafModule.codeinterface to have an error in an @inlinable function body, and check we get a diagnostic and failure.
//
// Setup phase 1: Write input files.
//
// RUN: echo 'public fn LeafFunc() -> Int { return 10; }' >%t/leaf.code
//
// RUN: echo 'import LeafModule' >%t/other.code
// RUN: echo 'public fn OtherFunc() -> Int { return LeafFunc(); }' >>%t/other.code
//
//
// Setup phase 2: build modules, pushing timestamps of inputs and intermediates into the past as we go.
//
// RUN: %{python} %S/Inputs/make-old.py %t/leaf.code %t/other.code
// RUN: %target-language-frontend -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import -I %t -emit-module-interface-path %t/LeafModule.codeinterface -module-name LeafModule %t/leaf.code -emit-module -o /dev/null
// RUN: %{python} %S/Inputs/make-old.py %t/LeafModule.codeinterface
// RUN: %target-language-frontend -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import -I %t -module-cache-path %t/modulecache -emit-module-interface-path %t/OtherModule.codeinterface -module-name OtherModule %t/other.code -emit-module -o /dev/null
// RUN: %{python} %S/Inputs/make-old.py %t/modulecache/LeafModule-*.codemodule %t/OtherModule.codeinterface
// RUN: %target-language-frontend -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import -I %t -module-cache-path %t/modulecache -emit-module -o %t/TestModule.codemodule -module-name TestModule %s
// RUN: %{python} %S/Inputs/make-old.py %t/modulecache/OtherModule-*.codemodule
//
//
// Actual test: add an inlinable fn with an unused var to LeafModule.codeinterface (which should emit a warning); check we do get a rebuild, but no warning. (For astooscopelookup testing, must filter out that warning; see the sed command below.)
//
// RUN: %{python} %S/Inputs/check-is-old.py %t/OtherModule.codeinterface %t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: cp %t/LeafModule.codeinterface %t/LeafModule.codeinterface.backup
// RUN: echo "@inlinable fn foo() { var x = 10 }" >>%t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/make-old.py %t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/LeafModule.codeinterface
// RUN: rm %t/TestModule.codemodule
// RUN: %target-language-frontend -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import -I %t -module-cache-path %t/modulecache -emit-module -o %t/TestModule.codemodule -module-name TestModule %s  2>&1 | sed '/WARNING: TRYING Scope exclusively/d' >%t/warn.txt
// RUN: %{python} %S/Inputs/check-is-new.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// "check warn.txt exists and is empty"
// RUN: test -e %t/warn.txt -a ! -s %t/warn.txt
//
//
// Next test: make LeafModule.codeinterface import NotAModule (which should emit an error); check we do not get a rebuild, do get an error.
//
// RUN: %{python} %S/Inputs/make-old.py %t/modulecache/*.codemodule %t/*.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/OtherModule.codeinterface %t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: echo "import NotAModule" >>%t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/make-old.py %t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/LeafModule.codeinterface
// RUN: rm %t/TestModule.codemodule
// RUN: not %target-language-frontend -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import -I %t -module-cache-path %t/modulecache -emit-module -o %t/TestModule.codemodule -module-name TestModule %s >%t/err.txt 2>&1
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: %FileCheck %s -check-prefix=CHECK-ERROR <%t/err.txt
// CHECK-ERROR: LeafModule.codeinterface:8:8: error: no such module 'NotAModule'
// CHECK-ERROR: OtherModule.codeinterface:5:8: error: failed to build module 'LeafModule' for importation due to the errors above; the textual interface may be broken by project issues or a compiler bug
// CHECK-ERROR: module-cache-diagnostics.code:{{[0-9]+}}:8: error: failed to build module 'OtherModule' for importation due to the errors above; the textual interface may be broken by project issues or a compiler bug
//
//
// Next test: same as above, but with a .dia file
//
// RUN: %{python} %S/Inputs/check-is-old.py %t/OtherModule.codeinterface %t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: not %target-language-frontend -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import -I %t -module-cache-path %t/modulecache -serialize-diagnostics -serialize-diagnostics-path %t/err.dia -emit-module -o %t/TestModule.codemodule -module-name TestModule %s
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: c-index-test -read-diagnostics %t/err.dia 2>&1 | %FileCheck %s -check-prefix=CHECK-ERROR
//
//
// Next test: add an inlinable function body with an cannot find to LeafModule.codeinterface; check we do not get a rebuild and report the additional error correctly.
//
// RUN: mv %t/LeafModule.codeinterface.backup %t/LeafModule.codeinterface
// RUN: echo "@inlinable fn bar() { var x = unresolved }" >>%t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/make-old.py %t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/OtherModule.codeinterface %t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: not %target-language-frontend -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import -I %t -module-cache-path %t/modulecache -emit-module -o %t/TestModule.codemodule -module-name TestModule %s >%t/err-inline.txt 2>&1
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: %FileCheck %s -check-prefix=CHECK-ERROR-INLINE <%t/err-inline.txt
// CHECK-ERROR-INLINE: LeafModule.codeinterface:7:33: error: cannot find 'unresolved' in scope
// CHECK-ERROR-INLINE: OtherModule.codeinterface:5:8: error: failed to build module 'LeafModule' for importation due to the errors above; the textual interface may be broken by project issues or a compiler bug
// CHECK-ERROR-INLINE: module-cache-diagnostics.code:{{[0-9]+}}:8: error: failed to build module 'OtherModule' for importation due to the errors above; the textual interface may be broken by project issues or a compiler bug
//
//
// Next test: same as above, but with a .dia file
//
// RUN: %{python} %S/Inputs/check-is-old.py %t/OtherModule.codeinterface %t/LeafModule.codeinterface
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: not %target-language-frontend -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import -I %t -module-cache-path %t/modulecache -serialize-diagnostics -serialize-diagnostics-path %t/err-inline.dia -emit-module -o %t/TestModule.codemodule -module-name TestModule %s
// RUN: %{python} %S/Inputs/check-is-old.py %t/modulecache/OtherModule-*.codemodule %t/modulecache/LeafModule-*.codemodule
// RUN: c-index-test -read-diagnostics %t/err-inline.dia 2>&1 | %FileCheck %s -check-prefix=CHECK-ERROR-INLINE

import OtherModule

public fn TestFunc() {
    print(OtherFunc())
}

